- Fix drawing on wxDC when using right-to-left layout (Artur Wieczorek).
- Fix wxGrid appearance and behaviour in RTL (Artur Wieczorek).
- Add paragraph spacing attributes support to wxTextCtrl (dannchr).
- Show new style directory selector even for non existent paths (raychow).
- Fix order of radial gradient stops (Alexandru Pana).


3.0.1: (released 2014-06-15)
----------------------------

All:

- Fix wxMBConvUTF8::ToWChar() for non-NUL-terminated strings (andyr).
- Fix length returned from wxMBConvUTF16::ToWChar(NULL) (Thomas Goyne).
- Fix wxSocket::WaitForAccept() in non-main thread (Hajo Kirchhoff).
- Fix memory overallocation in wxVector::reserve() (Nigel Paton).
- Fix `wx-config --libs` in monolithic build.
- Fix wxFileSystemWatcher::RemoveAll() (Melroy Tellis).
- Fix the build under HP-UX (tested under 11.31).
- Add Aragonese translation.

All (GUI):

- Fix crash when setting invalid label ending with "&" (ZaneUJi).
- Fix wxEditableListBox user data corruption when exchanging items
  in 64 bit builds (Tom Mettam, Rapid2D).
- Fix wxCommandProcessor::IsDirty() return value which was wrong after undoing
  all commands without saving (Neil Chittenden).
- Fix crash when Destroy()-ing a TLW with non-TLW parent.
- Fix crash in wxAuiToolBar::GetToolBarFits().
- Make wxFILTER_INCLUDE_LIST in wxTextValidator actually usable.
- Make wxHTML more efficient when displaying large tables (Kinaou Hervé).
- Prevent wxGrid rows/columns from becoming too small on double click.
- Fix wxGraphicsBitmap::ConvertToImage() when using Cairo.
- Support loading ICO files with data in PNG format (Artur Wieczorek).
- Fix dragging columns in wxGrid when some of them are hidden (Artur Wieczorek).
- Fix selecting elements from wxPropertyGrid enum properties (Artur Wieczorek).
- Don't show the dialog twice for colours in wxPropertyGrid (Artur Wieczorek).
- Fix handling of custom colours in wxPropertyGrid choices (Artur Wieczorek).
- Add "hint" property to wxTextCtrl XRC handler.