@@ -610,6 +610,7 @@ wxMSW:
 - Add paragraph spacing attributes support to wxTextCtrl (dannchr).
 - Show new style directory selector even for non existent paths (raychow).
 - Fix order of radial gradient stops (Alexandru Pana).
+- Fix font reated using wxFont(wxFontInfo()) ctor.
 
 
 3.0.1: (released 2014-06-15)
